4 test for the logic implemented - test all OK

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,9 @@ dependencies {
     // This is the lombok library
     implementation 'org.projectlombok:lombok:1.18.28'
     
+    // Testing
+    testImplementation('junit:junit:4.13.2')
+    
 }
 
 application {
