--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,12 +23,11 @@ dependencies {
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:31.1-jre'
     
-    // This is the lombok library
-    implementation 'org.projectlombok:lombok:1.18.28'
-    
     // Testing
     testImplementation('junit:junit:4.13.2')
     
+    // Mockito
+    testImplementation "org.mockito:mockito-core:5.4.0"
 }
 
 application {
