--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,8 +17,9 @@ repositories {
 }
 
 dependencies {
-    // Use JUnit Jupiter for testing.
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'
+
+    // Lombok
+    implementation "org.projectlombok:lombok:1.18.26"
 
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:31.1-jre'
@@ -32,8 +33,9 @@ dependencies {
     // Mockito
     testImplementation "org.mockito:mockito-core:5.4.0"
 
-    // Lombok
-    testImplementation "org.projectlombok:lombok:1.18.20"
+    // Use JUnit Jupiter for testing.
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'
+
 }
 
 application {
