--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,7 @@ dependencies {
     implementation 'com.google.guava:guava:31.1-jre'
     
     // https://mvnrepository.com/artifact/org.springframework/spring-jdbc
-    implementation 'org.springframework:spring-jdbc:6.0.9'
+    implementation 'org.springframework:spring-jdbc:5.3.10'
 
     // Testing
     testImplementation('junit:junit:4.13.2')
@@ -36,6 +36,8 @@ dependencies {
     // Use JUnit Jupiter for testing.
     testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'
 
+    // https://mvnrepository.com/artifact/com.h2database/h2
+    testImplementation 'com.h2database:h2:1.4.192'
 }
 
 application {
